# emmv

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  LICENSE.txt  README.md  emmv.py  pyproject.toml  setup.py
.github/workflows/: pylint.yml  python-package.yml
emmv/: __init__.py
examples/: adtk_example.py  alibi_detect.py  alibi_detect_example.py  keras_example.py  pycaret_example.py  pyod_example.py  sklearn_example.ipynb  sklearn_example.py
src/emmv/: __init__.py  metrics.py
src/emmv/examples/: __init__.py  adtk_example.py  alibi_detect_example.py  keras_example.py  pycaret_example.py  pyod_example.py  sklearn_example.py
tests/: requirements.txt  test_emmv.py
